content/boomerang-flow/3.0.0/installing/01.installing.md
---
title: Installing
index: 1
---

# Installing

Boomerang Flow is packaged as a Helm<sup>®</sup> 3 chart with the values documented in the chart. Please make sure to read the [prerequisites](pre-requisites) prior to installing.

## Installation steps

To get started quickly, install into a Kubernetes<sup>®</sup> cluster of 1.13+ via Helm, using the following commands:

**Step 1**

```helm repo add boomerang-io https://raw.githubusercontent.com/boomerang-io/charts/index```

**Step 2**

Install or upgrade the Helm chart using the relevant Helm commands and passing in any properties. By default, Flow will install in standalone mode with eventing via NATS disabled.

```sh
helm install --namespace <namespace> --set database.mongodb.host=<service_name> --set database.mongodb.secretName=<mongodb_secret> boomerang-io/bmrg-flow
```

## Postinstallation

### First Time Activation wizard

When installing Boomerang Flow in standalone mode, you will be presented with a token in the output of the Helm command, with some instructions on how to navigate to the installed running application.

Upon navigating to the links provided, a First Time Activation wizard appears, and redirection will occur, until the one-time activation token is provided.

This is an important step to ensure that an Administrator account is dynamically created, providing the user the correct entitlements to perform the postinstallation configuration steps.

<!-- TODO: get image of the activation process -->

### Postinstallation configuration

After installation and activation, you will be able to administer the settings. These are dynamic configurations that can be changed during runtime. This ensures don't have to provide this via the values YAML at installation time, as there is nothing worse than having to put together a values YAML with greater than 100 values!

Currently, these settings will affect how the workers interface and execute. See [Workers and Execute](/boomerang-cicd/architecture/worker-and-executor-architecture) for details.
